# Sparganothis.github.io

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  build.sh  docker-build.sh  fmt.sh  git-log.sh  git-version.sh  install-cuda.sh  install.sh  package-lock.json  publish-pypi.sh  release-version.sh  run-client.sh  run-cuda.sh  run-doc.sh  run-matchbox.sh  run-server.sh  test-install-pypi.sh  test-pypi.sh  test.sh
.docs/: lore.md
.github/workflows/: maturin.yml  rust.yml
CUSTOM_AUDIO_FX/: experiment-22024-06-29_15-14.bsk  kickdrum-noise-reverb-for-line-clear.bsk
client/: .gitignore  Cargo.toml  Trunk.toml  index.html  leptosfmt.toml  run-client.sh  rust-toolchain.toml  rustc-ice-2024-06-25T14_46_37-30352.txt
client/.cargo/: config.toml
client/public/: bootstrap_extra.css
client/public/audio/: README.md
client/public/audio/effects/80s_synth/: menu_80s_synth_1.bsk  menu_80s_synth_2.bsk  menu_80s_synth_3.bsk  menu_80s_synth_4.bsk  menu_80s_synth_5.bsk
client/public/audio/effects/jazz_drums/: JAZZ_DRUMS_1.bsk
client/public/js/: audio.js  mobile_check.js
client/src/: app_root.rs  audio3.rs  demo.rs  demo_matchbox.rs  error_template.rs  git_version.rs  hotkey_context.rs  lib.rs  main.rs  mobile_check.rs  style.rs  websocket.txt
client/src/audio/: dependent_module.rs  gui.rs  mod.rs
client/src/audio2/: mod.rs
client/src/comp/: feedback_overlay.rs  game_board.rs  game_board_bot.rs  game_board_flex.rs  game_board_mspaint.rs  game_board_player.rs  game_board_replay.rs  game_board_spectator.rs  hotkey_reader.rs  markdown.rs  menu_grid_view.rs  mod.rs  multiselect_repeat.rs  table_custom_games.rs  table_generic.rs  table_match.rs  table_replay_games.rs  table_replay_segments.rs  websocket_error_display.rs
client/src/page/: homepage.rs  mod.rs  page_1p.rs  page_1p_lobby.rs  page_1p_play.rs  page_2p.rs  page_2p_lobby.rs  page_about.rs  page_match.rs  page_replay.rs  page_replay_browser.rs  page_replay_single.rs  page_spectate.rs  page_user_profile.rs  page_vs_cpu.rs  you_are_phone.rs
client/src/page/settings/: controls.rs  mod.rs  server_api.rs  settings_page.rs  sound.rs  themes.rs
client/src/websocket/: demo_comp.rs  mod.rs
client/style/: main.scss
client/style/leptonic/themes/: light.scss
game/: Cargo.toml
game/.cargo/: config.toml
game/src/: git_version.rs  lib.rs  random.rs  rot.rs  tet.rs  timestamp.rs
game/src/api/: game_match.rs  game_replay.rs  mod.rs  table_paginate.rs  user.rs  user_settings.rs  websocket.rs
game/src/bot/: mod.rs  random_choice_bot.rs  wordpress_blog_bot.rs
game/src/tet/: game_state.rs  matrix.rs  mod.rs  random.rs  replay_segment.rs  tet.rs
leptris_frontend/: Cargo.toml
leptris_frontend/src/: app_root.rs  game_1p.rs  game_2p.rs  game_board.rs  game_cpu.rs  hotkey_reader.rs  lib.rs  main.rs  page_1p.rs  page_2p.rs  page_replay.rs  page_vs_cpu.rs  rot.rs  tet.rs
lib/leptonic-0.5.0/: Cargo.toml
lib/leptonic-0.5.0/leptonic/: Cargo.toml  build.rs
lib/leptonic-0.5.0/leptonic/src/: lib.rs  tab.rs  tabs.rs
lib/leptos-hotkeys-0.2.1/examples/demo/: Cargo.toml
lib/leptos-hotkeys-0.2.1/examples/ssr-demo/: Cargo.toml
lib/leptos-hotkeys-0.2.1/examples/ssr-demo/src/: error_template.rs
lib/leptos-hotkeys-0.2.1/leptos_hotkeys/: Cargo.toml
lib/leptos-hotkeys-0.2.1/leptos_hotkeys/src/: hotkey.rs
lib/tower-sessions-sled-store-master/: Cargo.toml  LICENSE  readme.md
lib/tower-sessions-sled-store-master/examples/: counter.rs
lib/tower-sessions-sled-store-master/src/: lib.rs
lib/typed-sled-main/src/: lib.rs
pt_reader/: Cargo.toml
pt_reader/src/: main.rs
server/: Cargo.toml  rustfmt.toml
server/.cargo/: .config.toml
server/src/: lib.rs  main.rs
server/src/backend/: mod.rs  server_fn.rs  server_info.rs  server_main.rs  session.rs  websocket.rs
server/src/chatbot/: chatbot.rs  config.rs  messages.rs  mod.rs  room_feedback.rs  room_public.rs  room_serverlog.rs
server/src/database/: tables.rs
sparganothis_gym/: .gitignore  Pipfile  original_alex.py  play_policy.py  play_random.py  play_wordpress.py  policy_net.pt  requirements2.txt  run_policy.py  train.py
sparganothis_gym/tetris/: core.py  env.py  hparams.py  memory.py  model.py  reward.py
sparganothis_vim/: .gitignore  Cargo.toml  pyproject.toml  test.py
sparganothis_vim/src/: lib.rs
webapp/: .gitignore  Cargo.toml  Makefile.toml
webapp/.cargo/: config.toml
webapp/e2e/: Cargo.toml
webapp/public/: leptonic-ciordit.css
webapp/src/: error_template.rs  errors.rs  lib.rs  main.rs
webapp/src/client/: app_root.rs  game_board.rs  game_board_spectator.rs  hotkey_reader.rs  mod.rs  page_1p.rs  page_2p.rs  page_replay.rs  page_user_profile.rs  page_vs_cpu.rs  sse_demo.rs  style.rs  websocket_demo.rs
webapp/src/game/: mod.rs  random.rs  rot.rs  tet.rs  timestamp.rs
webapp/src/server/: debug.rs  mod.rs
webapp/src/server/api/: game_replay.rs  mod.rs  server_info.rs  user.rs  websocket.rs
webapp/src/server/backend/: demo_sse.rs  fallback.rs  mod.rs  server_info.rs  server_main.rs  session.rs  websocket.rs
webapp/src/server/database/: config.rs  mod.rs  tables.rs
