[workspace]
members = ["webapp"]
resolver = "2"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1 # 3 compilez slowly

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
