[package]
name = "game"
version = "0.1.11"
edition = "2021"

[dependencies]
serde_with = "3.8"
log = "0.4"
hex = "0.4"
# simple_logger = "4.0"
serde = { version = "1", features = ["derive"] }
# serde_json = {version="1"}
bincode = "1.3.3"
chrono = {version="0.4.38", features=["serde", "wasmbind"] }
time = {version="0.3.36", features=["serde"]}
# seahash = "4"
getrandom = { version = "0.2", features = ["js"] }

# thiserror = "1.0"
anyhow = "1.0.86"
rand  = {version="0.8.5"}
rand_chacha = "0.3.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
timediff = "0.2.3"

wasm-bindgen-test = "0.3"

[dev-dependencies]
# pretty_assertions = "1.4.0"