[package]
name = "leptris_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_meta = "0.6.11"
leptos_router = {version="0.6.11", features=["csr"]}
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1.7"
stylist = {version="0.13.0", features=["parser"]}
thiserror = "1.0.61"
anyhow = "1.0.86"
leptos_hotkeys = {path="./lib/leptos-hotkeys-0.2.1/leptos_hotkeys"}


[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-bindgen = "0.2"
web-sys = "0.3"
