[package]
name = "pt_reader"
version = "0.1.12"
edition = "2021"

[dependencies]
log = "0.4"
tch = {version="0.16.0", features=["download-libtorch"]}
anyhow = "1.0.86"
# serde = { version = "1", features = ["derive"] }
# serde_json = {version="1"}
# bincode = "1.3.3"
# rand  = {version="0.8.5"}
# rand_chacha = "0.3.1"
# uuid = { version = "1.8.0", features = ["v4", "serde"] }
# timediff = "0.2.3"

[dev-dependencies]
# pretty_assertions = "1.4.0"