[package]
name = "server"
version = "0.1.7"
edition = "2021"


[dependencies]
game = {path = "../game"}

log = "0.4"
# simple_logger = "4.0"
# serde = { version = "1", features = ["derive"] }
serde_json = {version="1"}
bincode = "1.3.3"
# chrono = {version="0.4.38", features=["serde", "wasmbind"] }
time = {version="0.3.36", features=["serde"]}
# seahash = "4"

# thiserror = "1.0"
anyhow = "1.0.86"
rand  = "0.8.5" 
uuid = { version = "1.8.0", features = ["v4", "serde"] }
http = { version = "1.0" }

# leptos client + server
# leptos = { version = "0.6", features=[ ]}


# server only
axum = { version = "0.7", features = ["ws"]}
tower = { version = "0.4"}
# leptos_axum = {  version = "0.6"}
# leptos_integration_utils = { version = "0.6"}
tower-http = { version = "0.5", features = ["fs", "trace"]}
tokio = { version = "1", features = ["full"]}
tower-sessions-sled-store = { path = "../lib/tower-sessions-sled-store-master"}
tower-sessions =  { version = "0.12.2"}
# axum-login =  { version = "0.15.2"}
sled = {version="0.34.7"}
typed-sled = {path="../lib/typed-sled-main"}
random_word = { version = "0.4.3", features = ["de"] }
# rand_chacha = "0.3.1"
# tokio-stream = { version = "0.1.14"}
axum-extra = { version="0.9.3", features = ["typed-header"]  }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
once_cell = {version="1.18"}
async-trait = {version="0.1.80" }
futures = {version="0.3" }



[dev-dependencies]
# pretty_assertions = "1.4.0"
# wasm-bindgen-test  = "0.3"
