[package]
name = "sparganothis_vim"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sparganothis_vim"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.21.1", features=["extension-module", "generate-import-lib"]}
game = {path = "../game"}
