[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
# simple_logger = "4.0"
serde = { version = "1", features = ["derive"] }
serde_json = {version="1"}
bincode = "1.3.3"
chrono = {version="0.4.38", features=["serde", "wasmbind"] }
time = {version="0.3", features=["serde"]}
# seahash = "4"

thiserror = "1.0"
anyhow = "1.0.86"
rand  = "0.8.5" 
uuid = { version = "1.8.0", features = ["v4", "serde"] }
http = { version = "1.0" }

# leptos client + server
leptos = { version = "0.6", features=[ ]}
# leptos-struct-table = {version="0.10.2", features=["uuid", "time"]}
# broadcaster = "1"
# lazy_static = "1"
# gloo-net = { git = "https://github.com/rustwasm/gloo" }
# leptos_sse = {version = "0.4.0"}
# serde-wasm-bindgen = "0.6"
# gloo-utils = "0.2.0"
# sqlx = { version = "0.7", features = [
# 	"runtime-tokio-rustls",
# 	"sqlite",
# ], optional = true }
# tracing = "0.1"

# client only
console_error_panic_hook = {version="0.1", optional=true}
leptos-use = {version="0.10.10", optional=true}
leptos_hotkeys = {path="../lib/leptos-hotkeys-0.2.1/leptos_hotkeys", optional=true}
wasm-bindgen = {version="0.2", optional = true}
console_log = {version="1.0", optional = true}
stylist = {version="0.13.0", features=["parser"], optional=true}
leptos_router = {version="0.6", features=["csr" ], optional=true}
leptos_meta = {version = "0.6", features=[ ], optional=true}
leptonic = {version = "0.5.0" , optional = true,features = ["csr"]}
leptos-struct-table = {version = "0.10.2" , optional =  true}

# server only
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
leptos_axum = {  version = "0.6", optional = true }
leptos_integration_utils = { version = "0.6", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-sessions-sled-store = { path = "../lib/tower-sessions-sled-store-master", optional = true }
tower-sessions =  { version = "0.12.2", optional = true }
# axum-login =  { version = "0.15.2", optional = true }
sled = {version="0.34.7", optional = true }
typed-sled = {version="0.2", optional = true }
random_word = { version = "0.4.3", features = ["de"], optional = true}
rand_chacha = "0.3.1"
# tokio-stream = { version = "0.1.14", optional = true }
axum-extra = { version="0.9.3", features = ["typed-header"] , optional = true}
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true}
once_cell = {version="1.18", optional=true}
async-trait = {version="0.1.80", optional = true}
# futures = {version="0.3", optional=true}


[features]
csr = [
	"leptos/csr", 
	"dep:leptos_router",
	"dep:leptos_meta",
	"leptos_meta/csr", 
	"leptos_router/csr",
	"dep:console_error_panic_hook",
	"dep:leptos-use",
	"dep:leptos_hotkeys",
	"dep:wasm-bindgen",
	"dep:console_log",
	"dep:stylist",
	"dep:leptonic", "leptonic/csr",
	"dep:leptos-struct-table",
]

ssr = [
	"dep:once_cell", 
	"dep:async-trait",  
	# "dep:futures",
	"dep:axum", "axum/ws",
	"dep:axum-extra",
	"dep:tower",
	"dep:tower-http",
	"tower-http/trace",
	"dep:tokio",
	"leptos/ssr",
	# "leptos_sse/ssr",
	# "leptos_sse/axum",
	# "leptos_meta/ssr",
	# "leptos_router/ssr",
	"dep:leptos_axum",
	"dep:leptos_integration_utils",
	# "leptos-use/ssr",
	"dep:tower-sessions",
	"dep:tower-sessions-sled-store",
	# "dep:axum-login",
	"dep:sled",
	"dep:typed-sled",
	"dep:random_word",
	# "dep:tokio-stream",
	"dep:tracing-subscriber",
	# "dep:sqlx",
]

[dev-dependencies]
# pretty_assertions = "1.4.0"
wasm-bindgen-test  = "0.3"


[package.metadata.cargo-all-features]
denylist = ["axum", "tower", "tower-http", "tokio", "sqlx", "leptos_axum"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]



[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory. Relative to your project root.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory. Relative to your project root.
# Leptonic's `<Root>` component expects JS files to be available at a "js" directory at runtime (for dynamic script includes). Specify a different prop value if you choose a non-stadard location here. 
js-dir = "public/js"


[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "webapp"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "./style.css"
style-file = "style/main.scss"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:8080"
# The port to use for automatic reload monitoring
reload-port = 8081
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "cargo make test-ui"
end2end-dir = "e2e"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["csr"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
lib-profile-release = "wasm-release"
